--- a/package.json
+++ b/package.json
@@ -15,7 +15,12 @@
   "author": "Aishwary Dixit",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "dotenv": "^16.4.7",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "mongodb": "^6.14.2",
+    "mongoose": "^8.12.1",
+    "validator": "^13.12.0"
   }
 }
